[gd_scene load_steps=5 format=3 uid="uid://dtnyhsyeyk6mv"]

[ext_resource type="Script" path="res://scripts/skill.gd" id="1_dcsas"]
[ext_resource type="Script" path="res://scripts/state scripts/State Machine.gd" id="2_cjvxv"]
[ext_resource type="Script" path="res://scripts/state scripts/skill_states/choose_target_state.gd" id="3_5y0iy"]
[ext_resource type="Script" path="res://scripts/state scripts/skill_states/inactive_skill_state.gd" id="4_t21to"]

[node name="active_skill" type="Node2D"]
visible = false
script = ExtResource("1_dcsas")

[node name="skill_name_lbl" type="Label" parent="."]
offset_right = 40.0
offset_bottom = 23.0

[node name="StateMachine" type="Node" parent="." node_paths=PackedStringArray("state")]
script = ExtResource("2_cjvxv")
state = NodePath("InactiveSkillState")

[node name="ChooseTargetState" type="Node" parent="StateMachine"]
script = ExtResource("3_5y0iy")

[node name="InactiveSkillState" type="Node" parent="StateMachine"]
script = ExtResource("4_t21to")

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="skill_button" type="Button" parent="Control"]
layout_mode = 0
offset_right = 8.0
offset_bottom = 8.0

[connection signal="pressed" from="Control/skill_button" to="." method="_on_skill_button_pressed"]
